# rust_quiz_game

./: Cargo.toml  README.md
src/: gamemaker.rs  gamemakerv2.rs  lib.rs  main.rs  readme  riddler.rs  test_quiz.yaml  tools.rs
src/quizes/: jordy_test.toml  test_quiz.toml  ww2.toml  ww2.yaml
src/quizzes/: test.toml  test2.toml
tests/: riddler_tests.rs
