[package]
name = "rust_quiz_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = "0.4.33"
colored = "2.1.0"
fmt = "0.1.0"
glob = "0.3.1"
include_dir = { version = "0.7.4", features = ["glob"] }
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
tempfile = "3.10.0"
toml = "0.8.8"
